<resources>
    <string name="app_name">ACDAT-PruebaAndroid</string>
    <string name="txtSaludo"> </string>
    <string name="btnSaludar">Saludar</string>
    <string name="btnSaludar2">Saludar2</string>
    <string name="btnCont">Pulsacion</string>
    <string name="btnClickMain">Start</string>
    <string name="btnLlenar">Llenar</string>
    <string name="btnVaciar">Vaciar</string>
    <string name="btnProbar">Probar piscina</string>
    <string name="lblPiscina">Capacidad de la Piscina en métros cúbicos</string>
    <string name="txtValorSldr">0</string>
    <string name="lblCalcNum1">Introduce primer número</string>
    <string name="lblCalcNum2">Introduce el segundo número</string>
    <string name="btnRestar">Restar</string>
    <string name="btnSumar">Sumar</string>
    <string name="lblResultado">Resultado:</string>
    <string name="txtNum1">Numero 1</string>
    <string name="txtNum2">Numero 2</string>
    <string name="btnVolver">Volver</string>
    <string name="btnEditarTexto">Editar texto</string>
    <string name="btnGuardar">Guardar</string>
    <string name="vacio">" "</string>
    <string name="btnAnadir">Añadir</string>
    <string name="empty" />
    <string name="btnEliminar">Eliminar</string>
</resources>