<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".holamundo.HolaMundo">

    <Button
        android:id="@+id/btnSaludar"
        android:layout_width="184dp"
        android:layout_height="48dp"
        android:layout_marginStart="114dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="113dp"
        android:onClick="onClick"
        android:text="@string/btnSaludar"
        app:layout_constraintBottom_toTopOf="@+id/btnSaludar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnContPanel"
        android:layout_width="184dp"
        android:layout_height="48dp"
        android:layout_marginStart="114dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="190dp"
        android:text="@string/btnCont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSaludar2" />

    <TextView
        android:id="@+id/txtSaludar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="141dp"
        android:text="@string/txtSaludo"
        app:layout_constraintBottom_toTopOf="@+id/btnSaludar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.757" />

    <Button
        android:id="@+id/btnSaludar2"
        android:layout_width="184dp"
        android:layout_height="48dp"
        android:layout_marginStart="114dp"
        android:layout_marginEnd="114dp"
        android:text="@string/btnSaludar2"
        app:layout_constraintBottom_toTopOf="@+id/btnContPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSaludar" />
</androidx.constraintlayout.widget.ConstraintLayout>