<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtSaludar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="141dp"
        android:text="@string/txtSaludo"
        app:layout_constraintBottom_toTopOf="@+id/btnSaludar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

    <Button
        android:id="@+id/btnSaludar"
        android:layout_width="223dp"
        android:layout_height="66dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="159dp"
        android:onClick="onClick"
        android:text="@string/btnSaludar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.592" />

    <Button
        android:id="@+id/btnSaludar2"
        android:layout_width="224dp"
        android:layout_height="67dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="194dp"
        android:text="@string/btnSaludar2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSaludar" />

    <Button
        android:id="@+id/btnCont"
        android:layout_width="220dp"
        android:layout_height="75dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="131dp"
        android:text="@string/btnCont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSaludar2" />

</androidx.constraintlayout.widget.ConstraintLayout>