<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculadora">

    <TextView
        android:id="@+id/lblCalcNum1"
        android:layout_width="375dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:text="@string/lblCalcNum1"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNum2"
        android:layout_width="375dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="41sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCalcNum2"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/lblCalcNum2"
        android:layout_width="375dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:text="@string/lblCalcNum2"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNum1" />

    <Button
        android:id="@+id/btnRestar"
        android:layout_width="168dp"
        android:layout_height="78dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="20dp"
        android:text="@string/btnRestar"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNum2" />

    <TextView
        android:id="@+id/lblResultado"
        android:layout_width="375dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/lblResultado"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRestar" />

    <ScrollView
        android:id="@+id/scrollViewRes"
        android:layout_width="375dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblResultado">

        <TextView
            android:id="@+id/lblCalcResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="45sp"
            android:textStyle="bold" />
    </ScrollView>

    <Button
        android:id="@+id/btnSumar"
        android:layout_width="168dp"
        android:layout_height="78dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:text="@string/btnSumar"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNum2" />

    <EditText
        android:id="@+id/editTextNum1"
        android:layout_width="375dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="41sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCalcNum1"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>