<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PiscinaExcepcion">

    <Button
        android:id="@+id/btnProbar"
        android:layout_width="191dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="71dp"
        android:text="@string/btnProbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnVaciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="34dp"
        android:text="@string/btnVaciar"
        app:layout_constraintEnd_toStartOf="@+id/listPiscina"
        app:layout_constraintTop_toBottomOf="@+id/btnProbar" />

    <Button
        android:id="@+id/btnLlenar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnLlenar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnProbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listPiscina"
        android:layout_width="158dp"
        android:layout_height="213dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="381dp"
        android:layout_height="35dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/lblPiscina"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/sldNivel"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="384dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="17dp"
        android:max="10"
        android:progress="3"
        app:layout_constraintBottom_toTopOf="@+id/lblRespuesta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblRespuesta"
        android:layout_width="384dp"
        android:layout_height="481dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="43dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>